trunk/Archive2/bd/4aff54dd294c75/output
main.cpp: In function 'int main()':
main.cpp:66:5: error: static assertion failed: !
     static_assert(std::is_same< template_with_params<B, 3, int>, 
     ^
